--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,14 @@
-.App {
-  text-align: center;
+.field {
+  font-size: 0;
+  padding: 40px;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.cell {
+  border: 1px solid #000;
+  width: 40px;
+  height: 40px;
+  display: inline-block;
+  vertical-align: top;
+  margin-top: -1px;
+  margin-right: -1px;
 }
